# de-stress

./: .env  .env-headless  .env-testing  .gitignore  Dockerfile  README.md  development-compose.yml  headless-compose.yml  production-compose.yml  requirements.txt  run_destress_headless.py  setup.sh
.github/workflows/: big-structure-run-tests.yml  build-test.yml  front-end-test-build.yml  front-end-tests.yml
big-structure/: .env-testing  .gitignore  Dockerfile  build_dependencies.sh  build_dependencies_tests.sh  env-default  pyproject.toml  setupEvoEF2.sh
big-structure/reference-sets/: pisces_pc20_1_6_r0_25.txt  top500.txt
big-structure/src/destres_big_structure/: __init__.py  console.py  create_entry.py  design_models.py  schema.py
big-structure/src/destress_big_structure/: __init__.py  analysis.py  big_structure_models.py  console.py  create_entry.py  elm_types.py  schema.py  settings.py
big-structure/tests/: run_headless_for_testing.py  run_headless_with_env.sh  setenv.sh  test_aggrescan3d.py  test_destres_big_structure.py  test_dfire2.py  test_evoef.py  test_headless.py  test_jpred_submission.py  test_rosetta.py
big-structure/tests/testing_files/test_headless/: ui_test_results.csv
database/: .gitignore  Dockerfile  import_db_dump.sh
dependencies_for_de-stress/: README.txt
dependencies_for_de-stress/Aggrescan3D/: aggrescan3D_cli_run.py
dependencies_for_de-stress/DFIRE2-pair/: Readme  calene  calene.cc  calene_part  calene_part.cc
dependencies_for_de-stress/EvoEF2/: EvoEF2
front-end/: .dockerignore  .gitignore  Dockerfile  README.md  elm-analyse.json  elm.json  index.html  optimize.sh  package-lock.json  package.json  webpack.config.js
front-end/config/: destress.conf
front-end/elm-spa-3/: Dockerfile  elm.json  package.json
front-end/elm-spa-3/public/: styles.css
front-end/elm-spa-3/src/: Ampal.elm  Style.elm  Transitions.elm
front-end/elm-spa-3/tests/: TestDesign.elm  TestSpecification.elm
front-end/old-tmp/: Dockerfile  elm.json
front-end/old-tmp/src/: Design.elm  DesignMetrics.elm  Main.elm  index.js
front-end/public/: index.html  main.js  ngl-web-component.js  ports.js
front-end/src/: Ampal.elm  Design.elm  DesignMetrics.elm  Editable.elm  Global.elm  Layout.elm  ListExtra.elm  Main.elm  Metrics.elm  Ports.elm  ReferenceSet.elm  Shared.elm  Specification.elm  Style.elm  Transitions.elm  WebSockets.elm  index.js  main.css
front-end/src/BigStructure/: Interface.elm  Mutation.elm  Object.elm  Query.elm  Scalar.elm  VerifyScalarCodecs.elm
front-end/src/Components/: Navbar.elm  README.md
front-end/src/Layouts/: Designs.elm  Main.elm  README.md  ReferenceSets.elm  Specifications.elm
front-end/src/Metrics/: Plots.elm
front-end/src/Pages/: DeStress.elm  Designer.elm  Designs.elm  Glossary.elm  Index.elm  (+6 more)
front-end/tests/: TestDesign.elm  TestResourceUuid.elm  Tests.elm
tutorial/: tutorial-structures.tar.xz
(+71 files in other folders)
