[tool.poetry]
name = "destres_big_structure"
version = "0.1.0"
description = ""
authors = ["Chris Wells Wood <cwwoodesq@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
SQLAlchemy = "^1.3"
graphene = "^2.1"
graphene_sqlalchemy = "^2.1"
Flask = "^1.0"
Flask-GraphQL = "^2.0"
click = "^7.0"
beautifulsoup4 = "^4.7"
lxml = "^4.3"
flask-cors = "^3.0"
isambard = { git = "https://github.com/isambard-uob/isambard.git", tag = "v2.3.0" }

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[tool.poetry.scripts]
dev_run = 'destres_big_structure.console:dev_run'
create_dummy_data = 'destres_big_structure.console:create_dummy_data'
dbs_db_from_scratch = 'destres_big_structure.console:dbs_db_from_scratch'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

