[tool.poetry]
name = "destress_big_structure"
version = "0.1.0"
description = ""
authors = ["Chris Wells Wood <cwwoodesq@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
SQLAlchemy = "^1.3"
graphene = "^2.1"
graphene_sqlalchemy = "^2.1"
Flask = "^1.0"
Flask-GraphQL = "^2.0"
click = "^7.0"
beautifulsoup4 = "^4.7"
lxml = "^4.3"
flask-cors = "^3.0"
isambard = { git = "https://github.com/isambard-uob/isambard.git", tag = "v2.3.0" }
flask_sockets = "^0.2.1"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
black = "^19.10b0"
flake8 = "^3.7.9"

[tool.poetry.scripts]
run_server = 'destres_big_structure.console:run_server'
create_designs_tables = 'destres_big_structure.console:create_designs_tables'
dbs_db_from_scratch = 'destres_big_structure.console:dbs_db_from_scratch'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

